other/remove-serviceaccount-token/.chainsaw-test/pod-not-patched01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: remove-satoken-ns
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      readOnly: true
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      readOnly: true
  volumes:
  - projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
