other/remove-serviceaccount-token/.chainsaw-test/pod-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod02
  namespace: remove-satoken-ns
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    volumeMounts:
    - mountPath: /foo
      name: empty
  volumes:
  - name: empty
    emptyDir:
      medium: memory
      sizeLimit: 20Mi
