other/remove-serviceaccount-token/.chainsaw-test/pod-patched02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod03
  namespace: remove-satoken-ns
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: busybox:1.35
    volumeMounts:
    - mountPath: /foo
      name: config-vol
  volumes:
  - name: empty
    emptyDir:
      medium: memory
      sizeLimit: 20Mi
  - name: config-vol
    configMap:
      name: foo
      items:
        - key: foo
          path: bar
