other/remove-serviceaccount-token/.chainsaw-test/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: remove-satoken-ns
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: busybox02
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
  namespace: remove-satoken-ns
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: busybox02
    image: busybox:1.35
    volumeMounts:
    - mountPath: /foo
      name: empty
  volumes:
  - name: empty
    emptyDir:
      medium: memory
      sizeLimit: 20Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
  namespace: remove-satoken-ns
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: busybox:1.35
    volumeMounts:
    - mountPath: /foo
      name: config-vol
  volumes:
  - name: empty
    emptyDir:
      medium: memory
      sizeLimit: 20Mi
  - name: config-vol
    configMap:
      name: foo
      items:
        - key: foo
          path: bar
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    corp.org/can-use-serviceaccount: "true"
  name: pod04
  namespace: remove-satoken-ns
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  - name: busybox02
    image: busybox:1.35
    volumeMounts:
    - mountPath: /foo
      name: empty
  volumes:
  - name: empty
    emptyDir:
      medium: memory
      sizeLimit: 20Mi
