other/remove-serviceaccount-token/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: remove-serviceaccount-token
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../remove-serviceaccount-token.yaml
    - apply:
        file: ns.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pods.yaml
  - name: step-03
    try:
    - assert:
        file: pod-patched.yaml
    - assert:
        file: pod-patched02.yaml
    - error:
        file: pod-not-patched01.yaml
    - error:
        file: pod-not-patched02.yaml
  - name: step-04
    try:
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n remove-satoken-ns
